improve features page

--- a/pages/features.mdx
+++ b/pages/features.mdx
@@ -1,7 +1,6 @@
+import { Features} from '../components/Features'
+
 # Features
 
-- Comments & Replies
-- Permissions (Admin, Editor, Commenter, Viewer)
-- Attachments
-- Nested Folders
-- Editor Features (Tables, Check-list, Code, etc.)
+<Features />
+
