add ios testflight app again

--- a/pages/early-access.mdx
+++ b/pages/early-access.mdx
@@ -46,6 +46,4 @@ You can directly download the Windows App from [https://github.com/serenity-kit/
 
 To install the iOS App you first need to install Apple's [TestFlight](https://apps.apple.com/us/app/testflight/id899247664) App from the App Store.
 
-We moved to a new Apple Developer Account and need to wait for the review. The link should be available after 2024-05-16 again.
-
-{/* After wars you can download the Serenity App with this link [https://testflight.apple.com/join/OwLGz0Cz](https://testflight.apple.com/join/OwLGz0Cz). */}
+Afterwards you can download the Serenity App with this link [https://testflight.apple.com/join/XMgMUSIi](https://testflight.apple.com/join/XMgMUSIi).
